--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simwms-shared",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "description": "The default blueprint for ember-cli addons.",
   "directories": {
     "doc": "doc",
@@ -35,6 +35,7 @@
     "ember-disable-prototype-extensions": "^1.0.0",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.3",
+    "ember-functional-validation": "0.1.1",
     "ember-try": "0.0.6"
   },
   "keywords": [
