--- a/package.json
+++ b/package.json
@@ -43,8 +43,9 @@
     "ember-addon"
   ],
   "dependencies": {
+    "ember-cli-babel": "^5.1.3",
     "ember-cli-coffeescript": "1.13.0",
-    "ember-cli-babel": "^5.1.3"
+    "rsvp": "^3.1.0"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
