put in a lot of tests, and the entire data stack is now in this addon separated from the actual user tools

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.2.0",
+    "ember-bootstrap-datetimepicker": "1.0.2",
     "ember-cli": "1.13.13",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-content-security-policy": "0.4.0",
@@ -31,13 +32,16 @@
     "ember-cli-release": "0.2.8",
     "ember-cli-sri": "^1.2.0",
     "ember-cli-uglify": "^1.2.0",
+    "ember-cpm": "2.1.1",
     "ember-data": "2.1.0",
     "ember-disable-prototype-extensions": "^1.0.0",
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^1.0.4",
-    "ember-form-tool": "foxnewsnetwork/ember-form-tool#v0.2.4",
+    "ember-form-tool": "foxnewsnetwork/ember-form-tool#v0.2.8",
     "ember-functional-validation": "0.1.2",
     "ember-moment": "4.1.0",
+    "ember-notify": "4.3.1",
+    "ember-phoenix-chan": "foxnewsnetwork/ember-phoenix-chan#v0.1.9",
     "ember-truth-helpers": "1.2.0",
     "ember-try": "~0.0.8"
   },
