--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,8 @@
     "js-cookie": "~2.0.3",
     "bootstrap": "~3.3.6",
     "moment": ">= 2.8.0",
-    "moment-timezone": ">= 0.1.0"
+    "moment-timezone": ">= 0.1.0",
+    "eonasdan-bootstrap-datetimepicker": "~4.14.30",
+    "phoenix": "phoenixframework/phoenix#v1.0.3"
   }
 }
