--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ember-moment": "4.1.0",
     "ember-notify": "4.3.1",
     "ember-phoenix-chan": "foxnewsnetwork/ember-phoenix-chan#v0.1.9",
+    "ember-power-select": "0.6.5",
     "ember-truth-helpers": "1.2.0",
     "ember-try": "~0.0.8"
   },
